syntax = "proto3";
option go_package = "cs.ubc.ca/cpsc416/onionRPC/exitNode";
package exitNode;

message PublicKey {
  bytes publicKey = 1;
}
message ReqEncrypted{
  bytes encrypted = 1;
  string sessionId = 2;
}
message ResEncrypted{
  bytes encrypted = 1;
}
service ExitNodeService {
  rpc ExchangePublicKey(PublicKey) returns (PublicKey) {}
  rpc ForwardRequest(ReqEncrypted) returns (ResEncrypted) {}
}
